# Veritasor-Contracts

./: Cargo.toml  README.md  TODO.md  interface-spec-policy.md  lib_backup.rs  lib_backup_utf8.rs  test_output.txt  wasm-size-budgets.toml
.github/workflows/: ci.yml  coverage.yml
contracts/aggregated-attestations/: Cargo.toml
contracts/attestation/: cargo_test_output.txt
contracts/common/: Cargo.toml
docs/: aggregated-attestations-windows.md  aggregated-attestations.md  attestation-anomaly-flags.md  attestation-disputes.md  attestation-dynamic-fees.md  attestation-events-indexer.md  attestation-expiry.md  attestation-metadata.md  attestation-multisig-timing.md  attestation-multisig.md  attestation-proof-hashes.md  attestation-property-test-results.md  attestation-property-testing.md  attestation-queries.md  attestation-rate-limits.md  attestation-revocation-indexing.md  attestation-revocation.md  attestation-snapshot-operations.md  attestation-snapshots.md  attestation-staking-integration.md  attestation-upgrades.md  attestor-staking.md  business-config-versioning.md  ci-wasm-size-budgets.md  common-governance-gating.md  contract-gas-benchmarks.md  contract-interfaces.md  coverage-reporting.md  deployment-validation.md  emergency-key-rotation.md  integration-registry-metadata.md  lender-access-list-audit.md  lender-access-list.md  lender-attestation-consumer.md  merkle-fuzz-testing.md  network-configuration.md  offchain-proof-hash.md  onchain-audit-log.md  protocol-dao-governance.md  protocol-dao-lifecycle.md  (+14 more)
scripts/: check-wasm-sizes.sh  coverage.ps1  coverage.sh
(+85 files in other folders)
